Fixed intro aligment on mobile

--- a/index.css
+++ b/index.css
@@ -256,7 +256,7 @@ hr {
         align-items: center;
     }
 
-    #intro p {
+    #intro div {
         text-align: center;
     }
 
